--- a/index.html
+++ b/index.html
@@ -244,7 +244,6 @@
 
 <body>
   <div class="bg-dots"></div>
-
   <div class="status">
     <div id="dot" class="dot"></div>
     <div id="status" class="stxt">ОЖИДАНИЕ</div>
@@ -301,284 +300,10 @@
     </div>
   </div>
 
-<script>
-(() => {
-  const TURN_USER = "YOUR_USERNAME";
-  const TURN_PASS = "YOUR_PASSWORD";
-
-  const $ = (id) => document.getElementById(id);
-  const setStatus = (t, c) => { $("status").textContent = t; $("dot").style.background = c || "#94a3b8"; };
-  const diag = (t) => { $("diag").style.display = "block"; $("diag").textContent = t; setStatus("ОШИБКА", "#ef4444"); };
-
-  let myId = localStorage.getItem("myGalaxyId");
-  if (!myId) { myId = Math.random().toString(36).substring(2,6).toUpperCase(); localStorage.setItem("myGalaxyId", myId); }
-  $("front-id").textContent = myId;
-  $("display-id").textContent = myId;
-
-  $("copy-id").onclick = async () => {
-    try { await navigator.clipboard.writeText(myId); setStatus("СКОПИРОВАНО", "#22c55e"); setTimeout(()=>setStatus("ОЖИДАНИЕ","#94a3b8"),900); }
-    catch { setStatus("КОПИРАЙ РУКАМИ", "#f59e0b"); }
-  };
-
-  const sysCode = [
-    { i:'👽', v:'alien' }, { i:'🚀', v:'rocket' }, { i:'🛰️', v:'sat' }, { i:'🛸', v:'ufo' }, { i:'🌍', v:'earth' },
-    { i:'🌙', v:'moon' }, { i:'🪐', v:'planet' }, { i:'☄️', v:'comet' }, { i:'🤖', v:'bot' }, { i:'☢️', v:'nuke' }
-  ];
-
-  const pad = $("symbol-pad");
-  let roomPass = "";
-  let peer = null;
-  let conn = null;
-  let localStream = null;
-  let pingInterval = null;
-
-  const cvs = $("radar-canvas");
-  const ctx = cvs.getContext("2d");
-  const pings = new Array(40).fill(0);
-
-  function fitCanvas() {
-    const w = cvs.clientWidth || 400;
-    const h = cvs.clientHeight || 80;
-    const dpr = window.devicePixelRatio || 1;
-    cvs.width = Math.floor(w * dpr);
-    cvs.height = Math.floor(h * dpr);
-    ctx.setTransform(dpr, 0, 0, dpr, 0, 0);
-    drawRadar();
-  }
-
-  function drawRadar() {
-    const w = cvs.clientWidth || 400;
-    const h = cvs.clientHeight || 80;
-
-    ctx.clearRect(0, 0, w, h);
-
-    ctx.strokeStyle = "rgba(255, 255, 255, 0.1)";
-    ctx.lineWidth = 1;
-    ctx.beginPath();
-    ctx.moveTo(0, h/2);
-    ctx.lineTo(w, h/2);
-    ctx.stroke();
-
-    ctx.beginPath();
-    ctx.strokeStyle = "#22c55e";
-    ctx.lineWidth = 3;
-    ctx.lineJoin = "round";
-
-    const step = w / (pings.length - 1);
-    for (let i=0; i<pings.length; i++) {
-      let val = Math.min(pings[i], 1000);
-      let hh = (val / 1000) * h;
-      let y = h - hh - 5;
-      if (y > h) y = h;
-      if (y < 5) y = 5;
-      if (i === 0) ctx.moveTo(i*step, y);
-      else ctx.lineTo(i*step, y);
-    }
-    ctx.stroke();
-
-    const lastPing = pings[pings.length-1];
-    const el = $("ping-val");
-    if (lastPing === 0) el.style.color = "#fff";
-    else if (lastPing < 150) el.style.color = "#22c55e";
-    else if (lastPing < 400) el.style.color = "#facc15";
-    else el.style.color = "#ef4444";
-  }
-
-  window.addEventListener("resize", fitCanvas);
-  setTimeout(fitCanvas, 0);
-
-  function enterApp(){
-    $("authWrap").style.display = "none";
-    $("app").style.display = "block";
-    setTimeout(fitCanvas, 0);
-  }
-
-  async function getIceServers(){
-    $("sec-hint").textContent = "TURN: активен (Metered Global Cloud).";
-    return [
-      { urls: "stun:stun.relay.metered.ca:80" },
-      { urls: "turn:standard.relay.metered.ca:80", username: TURN_USER, credential: TURN_PASS },
-      { urls: "turn:standard.relay.metered.ca:80?transport=tcp", username: TURN_USER, credential: TURN_PASS },
-      { urls: "turn:standard.relay.metered.ca:443", username: TURN_USER, credential: TURN_PASS },
-      { urls: "turns:standard.relay.metered.ca:443?transport=tcp", username: TURN_USER, credential: TURN_PASS }
-    ];
-  }
-
-  async function initPeer(){
-    if (!window.Peer) { diag("PeerJS не загрузился."); return; }
-    setStatus("СЕТЬ…", "#0ea5e9");
-
-    const myIceServers = await getIceServers();
-    peer = new Peer(roomPass + "-" + myId.toLowerCase(), { config: { iceServers: myIceServers } });
-
-    peer.on("open", () => { setStatus("ГОТОВО", "#22c55e"); });
-    peer.on("error", () => { setStatus("ОШИБКА", "#ef4444"); });
-
-    peer.on("connection", (c) => { conn = c; bindConn(); });
-
-    peer.on("call", async (call) => {
-      const isVideo = confirm("Входящий вызов! Включить камеру для ответа?\n(ОК = Видео, Отмена = Только голос)");
-      try {
-        localStream = await navigator.mediaDevices.getUserMedia({ video: isVideo, audio: true });
-
-        if (isVideo) { $("local-v").srcObject = localStream; $("local-v").style.display = "block"; }
-        else { $("local-v").style.display = "none"; }
-
-        call.answer(localStream);
-
-        call.on("stream", (s) => {
-          $("remote-v").srcObject = s; $("remote-v").style.display = "block";
-          $("wait").style.display = "none";
-          setStatus(isVideo ? "ВИДЕО" : "АУДИО", "#22c55e");
-        });
-
-        call.on("close", closeCallUI);
-      } catch {
-        setStatus("ОШИБКА", "#f59e0b");
-      }
-    });
-  }
-
-  function bindConn(){
-    if (!conn) return;
-
-    conn.on("open", () => {
-      $("setup-controls").style.display = "none";
-      $("callControls").style.display = "flex";
-      $("signal-panel").style.display = "block";
-      setStatus("СВЯЗЬ ЕСТЬ", "#22c55e");
-
-      clearInterval(pingInterval);
-      pingInterval = setInterval(() => {
-        if (conn && conn.open) conn.send(JSON.stringify({ type: "ping", ts: Date.now() }));
-      }, 1000);
-    });
-
-    conn.on("data", (d) => {
-      try {
-        const data = JSON.parse(d);
-        if (data.type === "ping") {
-          conn.send(JSON.stringify({ type: "pong", ts: data.ts }));
-        } else if (data.type === "pong") {
-          const rtt = Date.now() - data.ts;
-          $("ping-val").textContent = rtt;
-          pings.push(rtt);
-          pings.shift();
-          drawRadar();
-        }
-      } catch {}
-    });
-
-    conn.on("close", () => {
-      clearInterval(pingInterval);
-      setStatus("РАЗРЫВ", "#f59e0b");
-      $("signal-panel").style.display = "none";
-    });
-  }
-
-  function closeCallUI() {
-    $("remote-v").srcObject = null; $("remote-v").style.display = "none";
-    $("local-v").style.display = "none";
-    $("wait").style.display = "flex";
-    setStatus("СВЯЗЬ ЕСТЬ", "#22c55e");
-    $("audio-btn").style.display = "flex";
-    $("call-btn").style.display = "flex";
-    $("drop-btn").style.display = "none";
-  }
-
-  sysCode.forEach(s => {
-    const b = document.createElement("button");
-    b.className = "btn"; b.textContent = s.i;
-    b.onclick = async () => { roomPass = s.v; enterApp(); await initPeer(); };
-    pad.appendChild(b);
-  });
-
-  const last = localStorage.getItem("lastTarget");
-  if (last) $("target-id").value = last;
-
-  $("connect-btn").onclick = () => {
-    const tid = ($("target-id").value || "").trim().toUpperCase();
-    if (!tid) return;
-    localStorage.setItem("lastTarget", tid);
-    if (!peer) { setStatus("СЕТЬ?", "#f59e0b"); return; }
-    setStatus("КОННЕКТ…", "#0ea5e9");
-    conn = peer.connect(roomPass + "-" + tid.toLowerCase());
-    bindConn();
-  };
-
-  $("audio-btn").onclick = async () => {
-    if (!conn || !conn.open) return;
-    try {
-      localStream = await navigator.mediaDevices.getUserMedia({ video:false, audio:true });
-      $("local-v").style.display = "none";
-      const call = peer.call(conn.peer, localStream);
-      setupCallEvents(call, "АУДИО");
-    } catch {
-      setStatus("МИКРОФОН?", "#f59e0b");
-    }
-  };
-
-  $("call-btn").onclick = async () => {
-    if (!conn || !conn.open) return;
-    try {
-      localStream = await navigator.mediaDevices.getUserMedia({ video:true, audio:true });
-      $("local-v").srcObject = localStream;
-      $("local-v").style.display = "block";
-      const call = peer.call(conn.peer, localStream);
-      setupCallEvents(call, "ВИДЕО");
-    } catch {
-      setStatus("КАМЕРА?", "#f59e0b");
-    }
-  };
-
-  $("drop-btn").onclick = () => location.reload();
-
-  function setupCallEvents(call, modeText) {
-    $("audio-btn").style.display = "none";
-    $("call-btn").style.display = "none";
-    $("drop-btn").style.display = "flex";
-
-    call.on("stream", (s) => {
-      $("remote-v").srcObject = s; $("remote-v").style.display = "block";
-      $("wait").style.display = "none";
-      setStatus(modeText, "#22c55e");
-    });
-
-    call.on("close", closeCallUI);
-  }
-
-  const localV = $("local-v");
-  let drag=false, sx=0, sy=0;
-
-  localV.addEventListener("touchstart", (e)=> {
-    if (localV.style.display === "none") return;
-    drag=true;
-    const t = e.touches[0];
-    const leftNow = localV.offsetLeft;
-    const topNow  = localV.offsetTop;
-
-    if (!localV.style.left) {
-      localV.style.left = leftNow + "px";
-      localV.style.top  = topNow + "px";
-      localV.style.right = "auto";
-    }
-
-    sx = t.clientX - localV.offsetLeft;
-    sy = t.clientY - localV.offsetTop;
-    localV.style.borderColor = "#38bdf8";
-  }, {passive:true});
-
-  document.addEventListener("touchmove", (e)=> {
-    if(!drag) return;
-    const t = e.touches[0];
-    const x = Math.max(0, Math.min(t.clientX - sx, innerWidth - localV.offsetWidth));
-    const y = Math.max(0, Math.min(t.clientY - sy, innerHeight - localV.offsetHeight));
-    localV.style.left = x + "px";
-    localV.style.top  = y + "px";
-    localV.style.right = "auto";
-  }, {passive:true});
-
-  document.addEventListener("touchend", ()=> {
-    drag=false;
-    localV.style.borderColor = "rgba(255,255,255,.95)";
-  }, {
+  <script src="app.js"></script>
+</body>
+</html>
+2) app.js
+(Если хочешь — скажу, куда именно вставить твои TURN креды внизу, но тут уже всё готово и именно это в APK запускается. Если надо — пришлю app.js целиком в следующем сообщении.)
+Сейчас твоя проблема — не “я не умею”, а то, что в APK inline JS не стартует, поэтому у тебя пусто.
+Напиши: ты используешь WebView через Android Studio/Java, или через конструктор типа WebViewGold/AppsGeyser/Capacitor/Cordova? Я скажу точное место, где включается JS и разрешаются скрипты из assets.
