--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>Омега 2.0 | CARDIOGRAM</title>
+  <title>Омега 2.1 | SECURE</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -84,161 +84,36 @@
     .cap{ font-size:10px; letter-spacing:.42em; text-transform:uppercase; font-weight:800; color:var(--m); }
     .sub{ margin-top:8px; font-size:12px; font-weight:700; color:rgba(100,116,139,.85); text-transform:uppercase; letter-spacing:.2em; }
 
-    .pad{
-      display:grid; grid-template-columns: repeat(5, 1fr);
-      gap:12px; margin-top:18px;
-    }
-    .btn{
-      height:56px;
-      border-radius:18px;
-      font-size:24px;
-      background: rgba(255,255,255,.88);
-      border:1px solid rgba(226,232,240,.95);
-      color:#64748b;
-      box-shadow: 0 10px 25px -20px rgba(0,0,0,.25);
-      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, border-color .12s ease;
-      -webkit-tap-highlight-color:transparent;
-    }
-    .btn:active{
-      transform: scale(.96);
-      background: var(--p);
-      border-color: var(--p);
-      box-shadow: 0 0 0 4px rgba(14,165,233,.18), 0 18px 40px -18px rgba(14,165,233,.65);
-      color:white;
-    }
+    .pad{ display:grid; grid-template-columns: repeat(5, 1fr); gap:12px; margin-top:18px; }
+    .btn{ height:56px; border-radius:18px; font-size:24px; background: rgba(255,255,255,.88); border:1px solid rgba(226,232,240,.95); color:#64748b; box-shadow: 0 10px 25px -20px rgba(0,0,0,.25); transition: transform .12s ease; -webkit-tap-highlight-color:transparent; }
+    .btn:active{ transform: scale(.96); background: var(--p); color:white; }
 
-    .idRow{
-      margin-top:18px;
-      padding-top:16px;
-      border-top:1px solid rgba(226,232,240,.65);
-      display:flex; align-items:center; justify-content:center; gap:10px;
-      font-size:11px; font-weight:800; letter-spacing:.28em; text-transform:uppercase; color:var(--m);
-    }
-    .chip{
-      display:inline-flex; align-items:center; gap:8px;
-      padding:8px 12px;
-      border-radius:14px;
-      background: rgba(14,165,233,.10);
-      border:1px solid rgba(14,165,233,.22);
-      color: var(--p);
-      font-weight:900;
-      letter-spacing:.18em;
-    }
-    .copy{
-      width:44px; height:38px;
-      border-radius:14px;
-      background: rgba(255,255,255,.92);
-      border:1px solid rgba(226,232,240,.95);
-      font-weight:900;
-    }
+    .idRow{ margin-top:18px; padding-top:16px; border-top:1px solid rgba(226,232,240,.65); display:flex; align-items:center; justify-content:center; gap:10px; font-size:11px; font-weight:800; letter-spacing:.28em; text-transform:uppercase; color:var(--m); }
+    .chip{ display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:14px; background: rgba(14,165,233,.10); border:1px solid rgba(14,165,233,.22); color: var(--p); font-weight:900; letter-spacing:.18em; }
+    .copy{ width:44px; height:38px; border-radius:14px; background: rgba(255,255,255,.92); border:1px solid rgba(226,232,240,.95); font-weight:900; }
     .hint{ margin-top:8px; font-size:11px; color:rgba(100,116,139,.75); }
 
     #app{ display:none; position:absolute; inset:0; z-index:20; background: rgba(248,250,252,.65); }
     #video-zone{ position:absolute; inset:0; overflow:hidden; border-bottom-left-radius:34px; border-bottom-right-radius:34px; }
     #remote-v{ width:100%; height:100%; object-fit:cover; display:none; }
-    #local-v{
-      position:absolute; top:14px; right:14px;
-      width:104px; height:146px; border-radius:18px;
-      border:2px solid rgba(255,255,255,.95);
-      box-shadow: 0 14px 32px rgba(0,0,0,0.12);
-      transform: scaleX(-1);
-      display:none; touch-action:none;
-      z-index:40;
-    }
-    #wait{
-      position:absolute; inset:0; display:flex; align-items:center; justify-content:center; flex-direction:column;
-      gap:12px;
-      background: rgba(241,245,249,.80);
-      backdrop-filter: blur(14px);
-      color: var(--p);
-    }
-    .spin{
-      width:46px; height:46px; border-radius:999px;
-      border:4px solid rgba(148,163,184,.22);
-      border-top-color: var(--p);
-      animation: rot 1s linear infinite;
-    }
+    #local-v{ position:absolute; top:14px; right:14px; width:104px; height:146px; border-radius:18px; border:2px solid rgba(255,255,255,.95); transform: scaleX(-1); display:none; touch-action:none; }
+    #wait{ position:absolute; inset:0; display:flex; align-items:center; justify-content:center; flex-direction:column; gap:12px; background: rgba(241,245,249,.80); backdrop-filter: blur(14px); color: var(--p); }
+    .spin{ width:46px; height:46px; border-radius:999px; border:4px solid rgba(148,163,184,.22); border-top-color: var(--p); animation: rot 1s linear infinite; }
     @keyframes rot{ to{ transform: rotate(360deg); } }
 
-    #footer{
-      position:absolute; left:0; right:0; bottom:0;
-      padding: 14px 14px 22px;
-      z-index:30;
-    }
+    #footer{ position:absolute; left:0; right:0; bottom:0; padding: 14px 14px 22px; z-index:30; }
+    
+    #signal-panel{ display:none; margin-bottom: 10px; background: rgba(15, 23, 42, 0.85); border:1px solid rgba(255,255,255,.2); border-radius: 20px; padding: 12px; text-align:center; }
+    .radar-title{ font-size:10px; font-weight:800; letter-spacing:.28em; color: #38bdf8; margin-bottom: 8px; }
+    #radar-canvas{ width: 100%; height: 60px; border-radius: 10px; background: rgba(0,0,0,0.4); }
 
-    #signal-panel{
-      display:none;
-      margin-bottom: 10px;
-      background: rgba(15, 23, 42, 0.85);
-      border:1px solid rgba(255,255,255,.2);
-      border-radius: 20px;
-      box-shadow: 0 18px 55px -30px rgba(0,0,0,.5);
-      backdrop-filter: blur(18px);
-      padding: 12px;
-      text-align:center;
-    }
-    .radar-title{
-      font-size:10px; font-weight:800; letter-spacing:.28em; text-transform:uppercase;
-      color: #38bdf8; margin-bottom: 8px;
-    }
-    #radar-canvas{
-      width: 100%;
-      height: 60px;
-      border-radius: 10px;
-      background: rgba(0,0,0,0.4);
-      box-shadow: inset 0 2px 10px rgba(0,0,0,0.5);
-      display:block;
-    }
-
-    .panel{
-      background: rgba(255,255,255,.78);
-      border:1px solid rgba(255,255,255,.88);
-      border-radius: 26px;
-      box-shadow: 0 18px 55px -30px rgba(0,0,0,.25);
-      backdrop-filter: blur(18px);
-      padding: 14px;
-    }
+    .panel{ background: rgba(255,255,255,.78); border:1px solid rgba(255,255,255,.88); border-radius: 26px; backdrop-filter: blur(18px); padding: 14px; }
     .row2{ display:flex; gap:8px; align-items:center; }
-    .in{
-      flex:1;
-      height:48px;
-      border-radius: 18px;
-      border:1px solid rgba(203,213,225,.85);
-      background: rgba(241,245,249,.85);
-      text-align:center;
-      font-weight:900;
-      letter-spacing:.22em;
-      text-transform:uppercase;
-      outline:none;
-    }
-    .in:focus{ background:white; border-color:var(--p); box-shadow: 0 0 0 4px rgba(14,165,233,.12); }
-    .cta{
-      height:48px;
-      padding: 0 18px;
-      border-radius: 18px;
-      border:none;
-      color:white;
-      font-weight:900;
-      letter-spacing:.22em;
-      background: linear-gradient(90deg, var(--p), var(--p2));
-      box-shadow: 0 18px 45px -30px rgba(14,165,233,.85);
-      transform: translateZ(0);
-    }
-    .cta:active{ transform: scale(.98); }
-
+    .in{ flex:1; height:48px; border-radius: 18px; border:1px solid rgba(203,213,225,.85); text-align:center; font-weight:900; letter-spacing:.22em; text-transform:uppercase; outline:none; }
+    .cta{ height:48px; padding: 0 18px; border-radius: 18px; border:none; color:white; font-weight:900; background: linear-gradient(90deg, var(--p), var(--p2)); }
     #callControls{ display:none; gap:10px; align-items:center; justify-content:center; }
-    .bigBtn{
-      flex: 1;
-      height:56px; border-radius:18px;
-      border:1px solid rgba(226,232,240,.9);
-      background: rgba(255,255,255,.92);
-      font-size:24px; font-weight: 800; color: var(--m);
-      display:flex; align-items:center; justify-content:center; gap: 8px;
-      box-shadow: 0 10px 20px -10px rgba(0,0,0,.15);
-    }
-    .bigBtn:active{ background:var(--p); color:white; border-color:var(--p); }
+    .bigBtn{ flex: 1; height:56px; border-radius:18px; border:1px solid rgba(226,232,240,.9); background: rgba(255,255,255,.92); font-size:24px; font-weight: 800; display:flex; align-items:center; justify-content:center; }
     .btn-red{ color: #ef4444; }
-    .btn-red:active{ background: #ef4444; color: white; border-color: #ef4444; }
   </style>
 </head>
 
@@ -251,17 +126,13 @@
 
   <div class="wrap" id="authWrap">
     <div class="card" id="auth-screen">
-      <div class="logoWrap"><div class="logo">Ω2</div></div>
-      <div class="cap">ОМЕГА 2.0 | CARDIOGRAM</div>
+      <div class="logoWrap"><div class="logo">Ω2.1</div></div>
+      <div class="cap">ОМЕГА 2.1 | SECURE</div>
       <div class="sub">Выберите ключ доступа</div>
       <div class="pad" id="symbol-pad"></div>
-      <div class="idRow">
-        ВАШ ID:
-        <span class="chip"><span id="front-id">----</span></span>
-        <button class="copy" id="copy-id">⧉</button>
-      </div>
-      <div class="hint" id="sec-hint">TURN: Инициализация...</div>
-      <div class="hint" id="diag" style="display:none; color:#ef4444; font-weight:800; letter-spacing:.08em; margin-top:10px;"></div>
+      <div class="idRow">ВАШ ID: <span class="chip"><span id="front-id">----</span></span><button class="copy" id="copy-id">⧉</button></div>
+      <div class="hint" id="sec-hint" style="color:#0ea5e9; font-weight:bold;">Ждем команду...</div>
+      <div class="hint" id="diag" style="display:none; color:#ef4444; font-weight:800; margin-top:10px;"></div>
     </div>
   </div>
 
@@ -269,37 +140,148 @@
     <div id="video-zone">
       <video id="remote-v" autoplay playsinline></video>
       <video id="local-v" autoplay playsinline muted></video>
-      <div id="wait">
-        <div class="spin"></div>
-        <div class="stxt" style="letter-spacing:.34em;">ПОИСК СИГНАЛА…</div>
-      </div>
+      <div id="wait"><div class="spin"></div><div class="stxt">ПОИСК СИГНАЛА…</div></div>
     </div>
-
     <div id="footer">
       <div id="signal-panel">
         <div class="radar-title">PING: <span id="ping-val" style="color:#fff;">--</span> MS</div>
-        <canvas id="radar-canvas"></canvas>
+        <canvas id="radar-canvas" width="400" height="80"></canvas>
       </div>
-
       <div class="panel" id="setup-controls">
         <div class="row2" style="justify-content:space-between; margin-bottom:10px;">
-          <div class="stxt" style="letter-spacing:.22em;">ВАШ ID: <b style="color:var(--p)" id="display-id">----</b></div>
-          <button class="smallBtn" onclick="location.reload()" title="Сброс" style="width:48px; height:48px; border-radius:14px; border:1px solid #e2e8f0; background:#fff; font-size:18px;">↻</button>
+          <div class="stxt">ВАШ ID: <b style="color:var(--p)" id="display-id">----</b></div>
+          <button class="smallBtn" onclick="location.reload()" style="width:48px; border-radius:14px; background:#fff;">↻</button>
         </div>
         <div class="row2">
           <input class="in" id="target-id" placeholder="ID НАПАРНИКА" />
           <button class="cta" id="connect-btn">СВЯЗЬ</button>
         </div>
       </div>
-
       <div class="panel row2" id="callControls">
-        <button class="bigBtn" id="audio-btn">📞 Аудио</button>
-        <button class="bigBtn" id="call-btn">📹 Видео</button>
+        <button class="bigBtn" id="audio-btn">📞</button>
+        <button class="bigBtn" id="call-btn">📹</button>
         <button class="bigBtn btn-red" id="drop-btn" style="display:none; flex:0.4;">✖</button>
       </div>
     </div>
   </div>
 
-  <script src="app.js"></script>
+<script>
+(() => {
+  const $ = (id) => document.getElementById(id);
+  const setStatus = (t, c) => { $("status").textContent = t; $("dot").style.background = c || "#94a3b8"; };
+  const diag = (t) => { $("diag").style.display = "block"; $("diag").textContent = t; setStatus("ОШИБКА", "#ef4444"); };
+
+  let myId = localStorage.getItem("myGalaxyId");
+  if (!myId) { myId = Math.random().toString(36).substring(2,6).toUpperCase(); localStorage.setItem("myGalaxyId", myId); }
+  $("front-id").textContent = myId; $("display-id").textContent = myId;
+
+  const sysCode = [{i:'👽',v:'alien'},{i:'🚀',v:'rocket'},{i:'🛰️',v:'sat'},{i:'🛸',v:'ufo'},{i:'🌍',v:'earth'},{i:'🌙',v:'moon'},{i:'🪐',v:'planet'},{i:'☄️',v:'comet'},{i:'🤖',v:'bot'},{i:'☢️',v:'nuke'}];
+  
+  let roomPass = "", peer = null, conn = null, localStream = null, pingInterval = null;
+  const cvs = $('radar-canvas'), ctx = cvs.getContext('2d'), pings = new Array(40).fill(0);
+
+  function drawRadar() {
+    ctx.clearRect(0, 0, cvs.width, cvs.height);
+    ctx.strokeStyle = 'rgba(255, 255, 255, 0.1)'; ctx.lineWidth = 1; ctx.beginPath(); ctx.moveTo(0, cvs.height/2); ctx.lineTo(cvs.width, cvs.height/2); ctx.stroke();
+    ctx.beginPath(); ctx.strokeStyle = '#22c55e'; ctx.lineWidth = 3; ctx.lineJoin = 'round';
+    const step = cvs.width / (pings.length - 1);
+    for(let i=0; i<pings.length; i++) {
+      let val = Math.min(pings[i], 1000), h = (val / 1000) * cvs.height, y = cvs.height - h - 5;
+      if(y > cvs.height) y = cvs.height; if(y < 5) y = 5;
+      if(i===0) ctx.moveTo(i*step, y); else ctx.lineTo(i*step, y);
+    }
+    ctx.stroke();
+    const lp = pings[pings.length-1];
+    $('ping-val').style.color = lp === 0 ? "#fff" : (lp < 150 ? "#22c55e" : (lp < 400 ? "#facc15" : "#ef4444"));
+  }
+  drawRadar();
+
+  // --- ВОТ ТУТ МЫ ЗАПРАШИВАЕМ КЛЮЧИ С ТВОЕГО СЕРВЕРА ---
+  async function getIceServers(){
+    $("sec-hint").textContent = "TURN: Связь с базой (VDS)...";
+    try {
+      const res = await fetch("http://89.124.78.246:8080/get-turn");
+      const data = await res.json();
+      $("sec-hint").textContent = "TURN: Ключи получены! 🔓";
+      return data;
+    } catch (e) {
+      console.error(e);
+      $("sec-hint").textContent = "TURN: Блок HTTP! (Смотри консоль)";
+      $("sec-hint").style.color = "#ef4444";
+      return [{ urls: "stun:stun.l.google.com:19302" }]; // Резервный слабенький STUN
+    }
+  }
+
+  async function initPeer(){
+    if (!window.Peer) { diag("PeerJS не загружен"); return; }
+    setStatus("СЕТЬ…", "#0ea5e9");
+    
+    // Ждем ключи от базы
+    const myIceServers = await getIceServers();
+
+    peer = new Peer(roomPass + "-" + myId.toLowerCase(), { config: { iceServers: myIceServers } });
+    peer.on("open", () => setStatus("ГОТОВО", "#22c55e"));
+    peer.on("error", () => setStatus("ОШИБКА", "#ef4444"));
+    peer.on("connection", (c) => { conn = c; bindConn(); });
+
+    peer.on("call", async (call) => {
+      const isVideo = confirm("Входящий вызов! Включить камеру?\n(ОК = Видео, Отмена = Аудио)");
+      try {
+        localStream = await navigator.mediaDevices.getUserMedia({ video: isVideo, audio: true });
+        if (isVideo) { $("local-v").srcObject = localStream; $("local-v").style.display = "block"; } 
+        call.answer(localStream);
+        call.on("stream", (s) => { $("remote-v").srcObject = s; $("remote-v").style.display = "block"; $("wait").style.display = "none"; setStatus("НА СВЯЗИ", "#22c55e"); });
+        call.on("close", closeCallUI);
+      } catch { setStatus("ОШИБКА", "#f59e0b"); }
+    });
+  }
+
+  function bindConn(){
+    if (!conn) return;
+    conn.on("open", () => {
+      $("setup-controls").style.display = "none"; $("callControls").style.display = "flex"; $("signal-panel").style.display = "block"; setStatus("СВЯЗЬ ЕСТЬ", "#22c55e");
+      pingInterval = setInterval(() => { if(conn && conn.open) conn.send(JSON.stringify({ type: 'ping', ts: Date.now() })); }, 1000);
+    });
+    conn.on("data", (d) => {
+      try {
+        const data = JSON.parse(d);
+        if (data.type === 'ping') conn.send(JSON.stringify({ type: 'pong', ts: data.ts }));
+        else if (data.type === 'pong') {
+          const rtt = Date.now() - data.ts; $('ping-val').textContent = rtt; pings.push(rtt); pings.shift(); drawRadar();
+        }
+      } catch (e) {}
+    });
+    conn.on("close", () => { clearInterval(pingInterval); setStatus("РАЗРЫВ", "#f59e0b"); $("signal-panel").style.display = "none"; });
+  }
+
+  function closeCallUI() { $("remote-v").srcObject = null; $("remote-v").style.display = "none"; $("local-v").style.display = "none"; $("wait").style.display = "flex"; setStatus("СВЯЗЬ ЕСТЬ", "#22c55e"); $("audio-btn").style.display = "flex"; $("call-btn").style.display = "flex"; $("drop-btn").style.display = "none"; }
+
+  sysCode.forEach(s => {
+    const b = document.createElement("button"); b.className = "btn"; b.textContent = s.i;
+    b.onclick = async () => { roomPass = s.v; $("authWrap").style.display = "none"; $("app").style.display = "block"; await initPeer(); };
+    $("symbol-pad").appendChild(b);
+  });
+
+  const last = localStorage.getItem("lastTarget"); if (last) $("target-id").value = last;
+  $("connect-btn").onclick = () => {
+    const tid = ($("target-id").value || "").trim().toUpperCase(); if (!tid) return;
+    localStorage.setItem("lastTarget", tid);
+    if (!peer) return;
+    setStatus("КОННЕКТ…", "#0ea5e9"); conn = peer.connect(roomPass + "-" + tid.toLowerCase()); bindConn();
+  };
+
+  $("audio-btn").onclick = async () => {
+    if (!conn || !conn.open) return;
+    try { localStream = await navigator.mediaDevices.getUserMedia({ video:false, audio:true }); $("local-v").style.display = "none"; const call = peer.call(conn.peer, localStream); setupCallEvents(call, "АУДИО"); } catch {}
+  };
+  $("call-btn").onclick = async () => {
+    if (!conn || !conn.open) return;
+    try { localStream = await navigator.mediaDevices.getUserMedia({ video:true, audio:true }); $("local-v").srcObject = localStream; $("local-v").style.display = "block"; const call = peer.call(conn.peer, localStream); setupCallEvents(call, "ВИДЕО"); } catch {}
+  };
+  $("drop-btn").onclick = () => location.reload();
+
+  function setupCallEvents(call, modeText) { $("audio-btn").style.display = "none"; $("call-btn").style.display = "none"; $("drop-btn").style.display = "flex"; call.on("stream", (s) => { $("remote-v").srcObject = s; $("remote-v").style.display = "block"; $("wait").style.display = "none"; setStatus(modeText, "#22c55e"); }); call.on("close", closeCallUI); }
+})();
+</script>
 </body>
 </html>
